@@ -1,10 +1,11 @@
-# $Id: Makefile,v 1.5 2001/10/04 14:02:43 matthew Exp $
+# $Id: Makefile,v 1.6 2002/04/14 15:47:25 matthew Exp $
 
 CC=gcc
 CFLAGS=-g -Wall -Werror
 LDFLAGS=-g
 
 PROGS=filtergen
+BINDIR=/usr/local/sbin
 
 LDFLAGS=-lfl
 
@@ -22,4 +23,4 @@ clean:
 	rm -f *.o *~ core $(PROGS) *.yy.c
 
 install:
-	install -m755 $(BINDIR)
+	install -m755 $(PROGS) $(BINDIR)
